Fix the crash when navigate in System->Preferences->Keyboard. Bump the PORTREVISION.

PR:		ports/108967
Bugzilla:	http://bugzilla.gnome.org/show_bug.cgi?id=370038
Obtained from:	fd.org CVS
Submitted by:	Mark Evenson <mark.evenson@gmx.at>